--- a/client/components/footer/footer.css
+++ b/client/components/footer/footer.css
@@ -3,4 +3,16 @@ footer.footer {
   padding: 30px 0;
   margin-top: 70px;
   border-top: 1px solid #E5E5E5;
+  color:white;
+  background-color: black;
+  margin-top: 470px;
+}
+.style{
+  font-size: 12px;
+}
+#hrt{
+  color:red;
+}
+#name{
+  font-size: 25px;
 }
