--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -1,6 +1,26 @@
-<div class="container">
-  <p>Angular Fullstack v3.7.6 |
-    <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
-    <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a>
-  </p>
-</div>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-3">
+			<h4>Copyright &copy; 2017 <a href="/"> Movie Masti</a></h4>
+			</div><!-- end col-sm-2 -->
+
+			<div class="col-sm-3">
+				<h4>About Us</h4>
+				<p class="style">We are happy to create a page.This page will help you in booking the ticket in new ways & easy way</p>
+			</div><!-- end col-sm-4 -->
+
+			<div class="col-sm-2">
+				<h4>Follow Us</h4>
+				<ul class="unstyled" class="style">
+					<li><a href="#">Twitter</a></li>
+					<li><a href="#">Facebook</a></li>
+
+				</ul>
+			</div><!-- end col-sm-2 -->
+
+			<div class="col-sm-4">
+				<h4>Coded with <span id="hrt" class="glyphicon glyphicon-heart"></span> By <span id="name"> Hentry Raj</span></h4>
+			</div><!-- end col-sm-2 -->
+		</div><!-- end row -->
+	</div><!-- end container -->
